--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
   <meta charset="UTF-8">
   <title>My Site</title>
 
-  <style>
-    body {
-      font-family: system-ui;
-      max-width: 700px;
-      margin: 60px auto;
-      line-height: 1.6;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
