--- a/index.html
+++ b/index.html
@@ -2,14 +2,41 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Site</title>
+  <title>My Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
-  <h1>Hello 👋</h1>
-  <p>This is my GitHub Pages site.</p>
+
+<nav class="navbar">
+  <a href="/">Home</a>
+  <a href="/portfolio/">Portfolio</a>
+  <a href="/writing/">Writing</a>
+  <a href="/blog/">Blog</a>
+  <a href="/projects/">Side Projects</a>
+</nav>
+
+<header class="hero">
+  <h1>My Work</h1>
+  <p>Data analysis, writing, and experiments.</p>
+</header>
+
+<section class="pinned">
+  <h2>⭐ Pinned Projects</h2>
+
+  <div class="project-grid">
+    <a class="project-card" href="assets/documents/sample.pdf">
+      <h3>Featured Analysis</h3>
+      <p>Regression modelling example project.</p>
+    </a>
+  </div>
+</section>
+
+<footer>
+  <p>© Me</p>
+</footer>
+
 </body>
 </html>
